--- a/settings.html
+++ b/settings.html
@@ -15,7 +15,7 @@
 </head>
 <!--MI RENDO CONTO CHE CICLANDO PARECCHIE COSE AVREI RISPARMIATO PARECCHIE RIGHE DI CODIDCE, PER QUESTIONI DI TEMPO HO OPTATO PER COPIA INCOLLA VARI PER LE COSE RIPETUTE-->
 
-<body class="bg-settings mb-5">
+<body class="bg-settings">
     <header>
         <div class="container-fluid bg-personal px-5">
             <div class="row">
@@ -256,6 +256,62 @@
             </div>
         </div>
     </main>
+    <footer class="bg-personal">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="d-none d-lg-block col-lg-2"></div>
+                <div class="col-12 col-lg-10">
+                    <div class="row mb-2 mt-3">
+                        <div class="col">
+                            <a href="https://www.facebook.com/netflixitalia/?locale=it_IT" target="_blank"><i
+                                    class="bi bi-facebook grey-personal hover-i px-2 fs-3"></i></a>
+                            <a href="https://www.instagram.com/netflixit/" target="_blank"> <i
+                                    class=" bi bi-instagram grey-personal hover-i px-2 fs-3"></i></a>
+                            <a href="https://twitter.com/NetflixIT" target="_blank"> <i
+                                    class="bi bi-twitter-x grey-personal hover-i px-2 fs-3"></i></a>
+                            <a href="https://www.youtube.com/channel/UCWOA1ZGywLbqmigxE4Qlvuw" target="_blank"> <i
+                                    class="bi bi-youtube grey-personal hover-i px-2 fs-3"></i></a>
+                        </div>
+                    </div>
+                    <div class="row mb-2 fsm-personal">
+                        <div class="col-3 col-lg-2 grey-personal"><a>Audio and Subtitle</a></div>
+                        <div class="col-3 col-lg-2 grey-personal"><a>Audio Description</a></div>
+                        <div class="col-3 col-lg-2 grey-personal"><a>Help center</a></div>
+                        <div class="col-3 col-lg-2 grey-personal"><a>Gift cards</a></div>
+                    </div>
+                    <div class="row mb-2 fsm-personal">
+                        <div class="col-3 col-lg-2 grey-personal"><a>Media Center</a></div>
+                        <div class="col-3 col-lg-2 grey-personal"><a>Investor Relations</a></div>
+                        <div class="col-3 col-lg-2 grey-personal"><a>Jobs</a></div>
+                        <div class="col-3 col-lg-2 grey-personal"><a>Terms of Use</a></div>
+                    </div>
+                    <div class="row mb-4 fsm-personal">
+                        <div class="col-3 col-lg-2 grey-personal"><a>Privacy</a></div>
+                        <div class="col-3 col-lg-2 grey-personal"><a>Legal Notices</a></div>
+                        <div class="col-3 col-lg-2 grey-personal"><a>Cookie Preferences</a></div>
+                        <div class="col-3 col-lg-3 grey-personal"><a>Coroporate Information</a></div>
+                    </div>
+                    <div class="row mb-2 fsm-personal">
+
+                        <div class="col grey-personal"><a href="#" class="grey-personal text-decoration-none">contact
+                                Us</a></div>
+                    </div>
+                    <div class="row mb-2 grey-personal border-1 ">
+
+                        <div class="col"><button type="button"
+                                class="btn btn-outline-secondary grey-personal fsm-personal" id="button-service">
+                                Service Code
+                            </button></div>
+                    </div>
+                    <div class="row grey-personal mb-1 fxs-personal">
+
+                        <div class="col">&copy;1997-2019 Netflix Inc.{i-0d00fcda2df9c0de}</div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
     <!--SCRIPT BOOTSTRAP-->
 
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
